--- a/src/components/Festival/Festival.css
+++ b/src/components/Festival/Festival.css
@@ -2,7 +2,7 @@
     color: #ed8b20;
 }
 .background{
-    background-color: rgba(172, 172, 165, 0.11);
+    background-color: white;
 }
 .festival{
     display: grid;
