--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,5 @@
 .header nav{
     margin-top: 5px;
-    background-color: rgba(129, 126, 126, 0.404);
 }
 .navbar-links{
     margin-top: 35px;
@@ -12,13 +11,20 @@
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 600;
     font-size: 22px;
-    color: rgb(72, 82, 75);
+    padding: 10px;
+    color: orangered;
+    border: 1px solid white;
 }
 .navbar-links a:hover{
-    color: black;
-    outline: black;
+    color: orangered;
+    border: 1px solid orangered;
+    border-radius: 5px;
 }
 .header img{
     width: 200px;
     height: 100px;
+}
+.header hr{
+    margin-top: 2px;
+    border: 1px solid rgb(14, 0, 0);
 }
