--- a/src/components/Vote/Vote.css
+++ b/src/components/Vote/Vote.css
@@ -1,3 +1,12 @@
-h2{
-    background-color: red;
+.color{
+    color: orangered;
+}
+.voting{
+    color: gray;
+    text-align: center;
+    margin-top: 10px;
+    font-family: 'Josefin Sans', sans-serif;
+}
+.voting h5{
+    line-height: 30px;
 }
