--- a/src/components/Votelist/Votelist.css
+++ b/src/components/Votelist/Votelist.css
@@ -17,7 +17,7 @@
     box-shadow: 0 2px 5px gray;
     padding: 5px;
 }
-.voting-list .fas{
+.voting-list .fa-play{
     position: relative;
     font-size: 30px;
     color: white;
@@ -39,6 +39,7 @@
     animation: spin01 5s linear infinite;
     transition: all 0.5s ease;
 }
+
 .song {
     background-color: orangered;
     font-size: 15px;
